# menu_task

./: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  readme.md  requirements.txt
menu_task/: asgi.py  settings.py  urls.py  wsgi.py
nested_menu/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
nested_menu/fixtures/: menus.json  users.json
nested_menu/migrations/: 0001_initial.py  0002_alter_menu_parent.py  0003_alter_menu_url.py  0004_alter_menu_parent_alter_menu_title.py
nested_menu/templates/: menu.html  tree_menu.html
nested_menu/templatetags/: menu_tags.py
