[tool.poetry]
name = "menu-task"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "menu_task"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
